# prospect

./: .gitignore  Cargo.toml  README.md  WRITEUP.md
example-files/: float.csv  string.csv
src/: main.rs
src/drivers/: mod.rs
src/drivers/csv/: sample_record.rs  signal_reader.rs  signal_writer.rs
src/drivers/visualization/: graph_generator.rs  mod.rs
src/operations/: mod.rs  operation.rs  signal_operation.rs
src/operations/add/: add_sample.rs  add_scalar.rs  add_signal.rs  mod.rs
src/operations/boundary/: boundary_signal.rs  mod.rs
src/operations/extremes/: extremes_signal.rs  mod.rs
src/primitives/: item.rs  mod.rs  sample.rs  signal.rs
src/primitives/scalars/: F64.rs  float_scalar.rs  mod.rs  scalar.rs  string_scalar.rs
src/readers/: csv_reader.rs  mod.rs  sample_record.rs  signal_writer.rs
src/server/: mod.rs
src/server/controllers/: mod.rs  operation_queries.rs  signal_queries.rs
src/server/input/: mod.rs  operation_inputs.rs
src/server/output/: mod.rs  operations_responses.rs  signal_responses.rs
src/storage/: mod.rs  signal_serializer.rs
src/storage_drivers/csv/: signal_reader.rs  signal_writer.rs
