[package]
name = "prospect"
version = "0.1.0"
authors = ["Ryan Lanigan <ryan.lanigan@seeq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
proptest = "0.9.4"
rand = "0.7.3"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"