[package]
name = "prospect"
version = "0.1.0"
authors = ["Ryan Lanigan <ryan.lanigan@seeq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
actix-web = "2"
actix-rt = "1"
actix-files = "0.2.1"
actix-multipart = "0.2.0"
serde_json = "1.0.45"
futures = "0.3.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
strum = "0.17.1"
strum_macros = "0.17.1"

[dev-dependencies]
proptest = "0.9.4"
rand = "0.7.3"

